# thetlnews

./: docker-compose.yml
backend/: .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: df3dfea3a267_initial_migration.py
backend/src/app/: main.py
backend/src/app/api/: admin.py  auth.py  cart.py  promocode.py
backend/src/app/core/: config.py  database.py  security.py
backend/src/app/models/: auth.py  cart.py  record.py  user.py
backend/src/app/schemas/: auth.py  cart.py  promocode.py  record.py  user.py
backend/src/app/services/: cart.py  promocode.py  user.py
backend/src/app/tasks/: celery_worker.py  send_email.py
frontend/: App.js  Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: AdminPanel.js  AuthForm.js  Header.js  LoginForm.js  RegisterForm.js  UserProfile.js
frontend/src/context/: AppContext.js
frontend/src/services/: api.js
